--- a/app/src/main/res/layout/fragment_client.xml
+++ b/app/src/main/res/layout/fragment_client.xml
@@ -40,12 +40,12 @@
 
         <EditText
             android:id="@+id/tv_search"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/iv_search"
             android:background="@null"
-            android:gravity="center"
+            android:gravity="left|center_vertical"
             android:inputType="text"
             android:singleLine="true"
             android:imeOptions="actionSearch"
