--- a/app/src/main/res/layout/item_examine.xml
+++ b/app/src/main/res/layout/item_examine.xml
@@ -17,7 +17,7 @@
             android:background="#f2f2f2" />
 
         <RelativeLayout
-            android:layout_width="351dp"
+            android:layout_width="match_parent"
             android:layout_height="144dp"
             android:background="#ffffff"
             android:orientation="vertical">
@@ -25,10 +25,12 @@
             <TextView
                 android:id="@+id/tv_company"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="18dp"
-                android:text="南京龙戈软件有限公司"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="sdfdsfdsfdsfdsdsfdsf"
                 android:textColor="#212121"
                 android:textSize="16sp" />
 
