--- a/app/src/main/res/layout/item_todo_detail.xml
+++ b/app/src/main/res/layout/item_todo_detail.xml
@@ -1,37 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingTop="20dp"
-    android:background="@color/white"
-    android:paddingBottom="20dp"
-    android:paddingRight="15dp">
+    android:paddingRight="15dp"
+    android:paddingBottom="20dp">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:textSize="12sp"
-        android:textColor="@color/black_333333"
-        tools:text="客戶名稱"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_content"
-        android:textSize="12sp"
-        android:textColor="@color/orange_FFB000"
-        tools:text="客戶名稱"
-        android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TextView>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/black_333333"
+            android:textSize="12sp"
+            tools:text="客戶名稱" />
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/orange_FFB000"
+            android:textSize="12sp"
+            tools:text="客戶名稱" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/gray_F2F2F2"
-        />
+        android:background="@color/gray_F2F2F2" />
 
 
 </RelativeLayout>
