--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -211,7 +211,7 @@
                     android:layout_height="44dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/home_ico_tzgg" />
+                    android:src="@mipmap/home_noitice" />
 
                 <TextView
                     android:layout_width="wrap_content"
